yeni dosyalar eklendi

--- a/4-RockPaperScissors.ipynb
+++ b/4-RockPaperScissors.ipynb
@@ -4,67 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bilgisayar 1 ile 100'e arasında random bir değer seçsin. Tahmin etmemiz istensin daha input değerler alalım ve bigisayarın seçtiği sayıyı bulmaya çalışalım. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from random import randint\n",
-    "def guess(number):\n",
-    "    user_number = int(input(\"sayı tahmin oyunu için bir tahminde bulun\"))\n",
-    "    while number != user_number:\n",
-    "        if number < user_number:\n",
-    "            print(\"üzgünüm daha küçük bir tahminde bulun\")\n",
-    "        else:\n",
-    "            print(\"üzgünüm, daha büyük bir tahminde bulunmalısın\")\n",
-    "        user_number = int(input(\"sayı tahmin oyunu için bir tahminde bulun\"))\n",
-    "    else:\n",
-    "        print(\"tebrikler,doğru tahmin\")\n",
-    "\n",
-    "guess(randint(1,100))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Aklımızdan bir değer tutalım. Daha sonra bilgisayarın bunu bilmesini sağlayalım."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "def computer_guess(x):\n",
-    "    start = 1\n",
-    "    end = 100\n",
-    "    result = \"\"\n",
-    "    while result != \"d\":\n",
-    "        guess = random.randint(start, end)\n",
-    "\n",
-    "        result = input(f\"{guess} değeri aklından tuttuğun değerden büyükse(b) küçükse (k), doğruysa (d) giriniz.\").lower()\n",
-    "        if result == \"b\":\n",
-    "            end = guess - 1\n",
-    "        elif result == \"k\":\n",
-    "            start = guess + 1\n",
-    "    print(\"Tebrikler, doğru tahmin\")\n",
-    "    \n",
-    "computer_guess(19)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Taş Kağıt Makas "
+    "Taş Kağıt Makas Oyunu yapalım ve scoreları göstersin "
    ]
   },
   {
@@ -121,15 +61,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
