--- a/5-VeriYapıları.ipynb
+++ b/5-VeriYapıları.ipynb
@@ -13,40 +13,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
-      "[18, 12, 15, 19, 11]\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 16, 17, 20]\n"
+      "[3, 6, 20, 5, 17, 2, 12, 7, 0, 16, 11, 18, 9, 19, 14, 10, 1, 13, 15, 8, 4]\n",
+      "[9, 15, 11, 1, 0, 7]\n",
+      "[3, 6, 20, 5, 17, 2, 12, 16, 18, 19, 14, 10, 13, 8, 4]\n"
      ]
     }
    ],
    "source": [
+    "#listeyi hazırlama\n",
     "import random\n",
-    "my_list = list(range(20+1))\n",
+    "\n",
+    "my_list = [i for i in range(0, 21)]\n",
+    "random.shuffle(my_list)\n",
+    "\n",
+    "#1. yol\n",
+    "remove_list = random.sample(my_list, 6)\n",
+    "\n",
+    "print(my_list)\n",
+    "print(remove_list)\n",
+    "\n",
+    "for i in remove_list:\n",
+    "    my_list.remove(i)\n",
+    "\n",
+    "#2.yol\n",
+    "#del my_list[0:6]\n",
+    "\n",
     "print(my_list)\n",
     "\n",
-    "randomlist = random.sample(range(10, 20), 5)\n",
-    "print(randomlist)\n",
-    "\n",
-    "my_set1 =  set()\n",
-    "my_set1.update(my_list)\n",
-    "\n",
-    "my_set2 =  set()\n",
-    "my_set2.update(randomlist)\n",
-    "\n",
-    "my_set3 = my_set1 - my_set2 \n",
-    "\n",
-    "eksik_list = list(my_set3)\n",
-    "\n",
-    "print(eksik_list)\n",
-    "\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listemiz içerisinde 6 tane sayı eksiktir. Eksik olan sayılar [0, 7, 9, 14, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.çözüm\n",
+    "my_list = [15, 13, 11, 16, 5, 3, 19, 2, 6, 12, 1, 8, 4, 10, 17]\n",
+    "\n",
+    "missing_list = []\n",
+    "for i in range(0, 21):\n",
+    "    if i not in my_list:\n",
+    "        missing_list.append(i)\n",
+    "\n",
+    "print(f\"Listemiz içerisinde {len(missing_list)} tane sayı eksiktir. Eksik olan sayılar {missing_list}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listemiz içerisinde 6 tane sayı eksiktir. Eksik olan sayılar {0, 7, 9, 14, 18, 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.çözüm\n",
+    "my_list = [15, 13, 11, 16, 5, 3, 19, 2, 6, 12, 1, 8, 4, 10, 17]\n",
+    "\n",
+    "my_set = {i for i in range(0,21)}\n",
+    "\n",
+    "difference_set = my_set - set(my_list)\n",
+    "print(f\"Listemiz içerisinde {len(difference_set)} tane sayı eksiktir. Eksik olan sayılar {difference_set}\")"
    ]
   },
   {
@@ -58,34 +107,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
-      "[13, 96, 11, 37, 65, 74, 98, 32, 86, 59, 56, 29, 79, 30, 95, 22, 18, 57, 9, 5, 7, 36, 1, 100, 90, 82, 87, 76, 80, 26, 55, 6, 50, 78, 62, 97, 34, 10, 39, 51, 43, 75, 0, 38, 88, 58, 72, 35, 77, 49, 61, 46, 45, 17, 84, 47, 42, 66, 64, 91, 68, 3, 92, 31, 85, 4, 27, 93, 73, 19, 41, 20, 89, 12, 71, 16, 83, 44, 25, 8, 24, 63, 2, 28, 21, 94, 15, 48, 60, 52, 23, 67, 99, 33, 69, 14, 40, 81, 54, 53]\n",
-      "[70]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
+      "[56, 88, 6, 91, 13, 85, 38, 20, 30, 70, 58, 7, 25, 47, 53, 99, 89, 86, 82, 32, 17, 96, 5, 80, 48, 78, 35, 19, 61, 74, 76, 40, 41, 79, 10, 100, 26, 45, 8, 98, 87, 97, 9, 39, 77, 73, 66, 95, 51, 59, 52, 33, 42, 44, 46, 75, 92, 27, 67, 57, 24, 1, 83, 16, 28, 49, 90, 62, 11, 12, 15, 65, 21, 55, 2, 71, 36, 69, 93, 23, 63, 34, 94, 43, 22, 50, 54, 64, 68, 29, 4, 81, 14, 3, 31, 84, 72, 18, 60]\n",
+      "[37]\n"
      ]
     }
    ],
    "source": [
     "import random\n",
-    "my_list = list(range(100+1))\n",
+    "my_list = list(range(1,100+1))\n",
     "print(my_list)\n",
     "\n",
-    "randomlist = random.sample(range(0, 100+1), 100)\n",
+    "randomlist = random.sample(range(1, 100+1), 99) #1'den 100'e kadar 99 tane random sayı üreten bir liste\n",
     "print(randomlist)\n",
     "\n",
-    "my_set1 =  set()\n",
-    "my_set1.update(my_list)\n",
+    "my_set1 =  set(my_list) # my_list'i sete çevirdim\n",
     "\n",
-    "my_set2 =  set()\n",
-    "my_set2.update(randomlist)\n",
+    "my_set2 =  set(randomlist) # randomlist'i sete çevirdim\n",
     "\n",
-    "my_set3 = my_set1 - my_set2 \n",
+    "\n",
+    "my_set3 = my_set1 - my_set2 # İlk listeden random oluşan listeyi çıkarttım ki olmayan (eksik olan) sayıyı bulabileyim\n",
     "\n",
     "eksik_list = list(my_set3)\n",
     "\n",
