--- a/5-VeriYapıları.ipynb
+++ b/5-VeriYapıları.ipynb
@@ -191,29 +191,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [2,7,11,15]\n",
+    "target = 9\n",
+    "topla = 0\n",
+    "\n",
+    "for i in nums:\n",
+    "    topla+=i\n",
+    "    while topla == target:\n",
+    "      break\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3018958654.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [126], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    while nums[i] += nums[i+1]:\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
      ]
     }
    ],
    "source": [
     "nums = [2,7,11,15]\n",
     "target = 9\n",
-    "topla = 0\n",
+    "topla1 = 0\n",
     "\n",
-    "for i in range(0, len(nums)):\n",
-    "    while nums[i] += nums[i+1]:\n",
-    "        \n",
-    "    if nums[i] == target:\n",
-    "        print(i)\n",
-    "\n"
+    "for i in nums:\n",
+    "    topla1 =nums[0] +nums[1] \n",
+    "print(topla1)\n",
+    "    "
    ]
   }
  ],
