--- a/5-VeriYapıları.ipynb
+++ b/5-VeriYapıları.ipynb
@@ -141,6 +141,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Kısayol\n",
+    "import random\n",
+    "my_list = [i for i in range(0,101)]\n",
+    "my_list.remove(random.randint(0,101))\n",
+    "random.shuffle(my_list)\n",
+    "\n",
+    "diff = (100*101)/2 - sum(my_list)\n",
+    "diff"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,21 +176,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 5, 6, 8, 10, 20, 80, 88]\n"
+      "[2, 5, 3, 6, 1, 4, 0]\n",
+      "[2, 3, 5, 6, 1, 4, 0] - 1\n",
+      "[2, 3, 5, 1, 6, 4, 0] - 3\n",
+      "[2, 3, 5, 1, 4, 6, 0] - 4\n",
+      "[2, 3, 5, 1, 4, 0, 6] - 5\n",
+      "[2, 3, 1, 5, 4, 0, 6] - 2\n",
+      "[2, 3, 1, 4, 5, 0, 6] - 3\n",
+      "[2, 3, 1, 4, 0, 5, 6] - 4\n",
+      "[2, 1, 3, 4, 0, 5, 6] - 1\n",
+      "[2, 1, 3, 0, 4, 5, 6] - 3\n",
+      "[1, 2, 3, 0, 4, 5, 6] - 0\n",
+      "[1, 2, 0, 3, 4, 5, 6] - 2\n",
+      "[1, 0, 2, 3, 4, 5, 6] - 1\n",
+      "[0, 1, 2, 3, 4, 5, 6] - 0\n"
      ]
     }
    ],
    "source": [
-    "my_list = [2, 8, 10, 80, 5, 88, 20, 1, 6]\n",
-    "my_list.sort()\n",
-    "print(my_list)"
+    "import random\n",
+    "\n",
+    "list_length = 7\n",
+    "my_list = [i for i in range(0,list_length)]\n",
+    "random.shuffle(my_list)\n",
+    "\n",
+    "print(my_list)\n",
+    "\n",
+    "#Bubble Sort\n",
+    "for i in range(list_length):\n",
+    "    for j in range(list_length - 1):#[0,1,2,3,4,..18,19]\n",
+    "        if my_list[j] > my_list[j + 1]:\n",
+    "            # temp = my_list[j]\n",
+    "            # my_list[j] = my_list[j + 1]\n",
+    "            # my_list[j + 1] = temp\n",
+    "            my_list[j], my_list[j + 1] = my_list[j + 1], my_list[j]\n",
+    "            print(my_list, '-', j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 3, 5, 1, 6, 4] - 0\n",
+      "[0, 1, 3, 5, 2, 6, 4] - 1\n",
+      "[0, 1, 2, 5, 3, 6, 4] - 2\n",
+      "[0, 1, 2, 3, 5, 6, 4] - 3\n",
+      "[0, 1, 2, 3, 4, 6, 5] - 4\n",
+      "[0, 1, 2, 3, 4, 5, 6] - 5\n",
+      "[0, 1, 2, 3, 4, 5, 6] - 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Selection Sort\n",
+    "import random\n",
+    "\n",
+    "list_length = 7\n",
+    "my_list = [i for i in range(0,list_length)]\n",
+    "random.shuffle(my_list)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for outer_index in range(list_length):\n",
+    "    current_min_index = outer_index\n",
+    "    for inner_index in range(outer_index +  1, list_length):\n",
+    "        if my_list[current_min_index] > my_list[inner_index]:\n",
+    "            current_min_index = inner_index\n",
+    "    \n",
+    "    my_list[outer_index], my_list[current_min_index] = my_list[current_min_index], my_list[outer_index]\n",
+    "    print(my_list,'-', outer_index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#İnsertion Sort\n",
+    "for outer_index in range(1, list_length):\n",
+    "    for inner_index in range(outer_index):\n",
+    "        if my_list[outer_index] < my_list[inner_index]:\n",
+    "            currentValue = my_list.pop(outer_index)\n",
+    "            my_list.insert(inner_index, currentValue)\n",
+    "            break\n",
+    "    print(my_list, '-', outer_index)\n"
    ]
   },
   {
@@ -191,43 +300,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums = [2,7,11,15]\n",
-    "target = 9\n",
-    "topla = 0\n",
-    "\n",
-    "for i in nums:\n",
-    "    topla+=i\n",
-    "    while topla == target:\n",
-    "      break\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "[-8, -6, -1, -13, -10, 20, 3, 15, -17, -18]\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "nums = [2,7,11,15]\n",
-    "target = 9\n",
-    "topla1 = 0\n",
+    "import random\n",
     "\n",
-    "for i in nums:\n",
-    "    topla1 =nums[0] +nums[1] \n",
-    "print(topla1)\n",
-    "    "
+    "list_length = 10\n",
+    "my_list = [random.randint(-20, 20) for i in range(0,list_length)]\n",
+    "\n",
+    "print(my_list)\n",
+    "\n",
+    "def getIndexesOfTarget(nums, target):\n",
+    "    for outer_index in range(list_length):\n",
+    "        for inner_index in range(outer_index, list_length):\n",
+    "            # if inner_index != outer_index and nums[outer_index] + nums[inner_index] == target:\n",
+    "                # return [outer_index, inner_index]\n",
+    "            if inner_index == outer_index:\n",
+    "                continue\n",
+    "            elif nums[outer_index] + nums[inner_index] == target:\n",
+    "                return [outer_index, inner_index]\n",
+    "           \n",
+    "print(getIndexesOfTarget(my_list, 13))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIndexesOfTarget(nums, target):\n",
+    "    for outerIndex in range(len(nums)): #Listedeki her bir sayıyı tek tek geziyoruz.\n",
+    "        for innerIndex in range(len(nums)):#Listedeki her bir sayı için, listedeki her bir sayıyı tek tek geziyoruz.\n",
+    "            if outerIndex == innerIndex: #Aynı index'te olan değerleri kullanamayacağımız için aynı indexleri atlıyoruz.\n",
+    "                continue\n",
+    "            elif nums[outerIndex] + nums[innerIndex] == target:#Eğer şu an üzerinde olduğumuz indexlerdeki sayıların toplamı target'a eşitse bu indexleri return ediyoruz.\n",
+    "                return [outerIndex, innerIndex]\n",
+    "\n",
+    "        print(outerIndex)\n",
+    "        print(innerIndex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIndexOfTarget(nums,target):\n",
+    "    visitedNumbers = {}\n",
+    "    for index in range(len(nums)):\n",
+    "        remain = target - nums[index]\n",
+    "\n",
+    "        if remain in visitedNumbers:\n",
+    "            return(visitedNumbers[remain], index)\n",
+    "\n",
+    "    visitedNumbers[nums[index]] = index"
    ]
   }
  ],
@@ -247,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
