--- a/5-VeriYapıları.ipynb
+++ b/5-VeriYapıları.ipynb
@@ -330,7 +330,7 @@
     "            elif nums[outer_index] + nums[inner_index] == target:\n",
     "                return [outer_index, inner_index]\n",
     "           \n",
-    "print(getIndexesOfTarget(my_list, 13))\n"
+    "print(getIndexesOfTarget(my_list, 13))"
    ]
   },
   {
@@ -340,8 +340,8 @@
    "outputs": [],
    "source": [
     "def getIndexesOfTarget(nums, target):\n",
-    "    for outerIndex in range(len(nums)): #Listedeki her bir sayıyı tek tek geziyoruz.\n",
-    "        for innerIndex in range(len(nums)):#Listedeki her bir sayı için, listedeki her bir sayıyı tek tek geziyoruz.\n",
+    "    for outerIndex in range(len(nums)):  #Listedeki her bir sayıyı tek tek geziyoruz.\n",
+    "        for innerIndex in range(len(nums)): #Listedeki her bir sayı için, listedeki her bir sayıyı tek tek geziyoruz.\n",
     "            if outerIndex == innerIndex: #Aynı index'te olan değerleri kullanamayacağımız için aynı indexleri atlıyoruz.\n",
     "                continue\n",
     "            elif nums[outerIndex] + nums[innerIndex] == target:#Eğer şu an üzerinde olduğumuz indexlerdeki sayıların toplamı target'a eşitse bu indexleri return ediyoruz.\n",
